Basic cleanup for apr.  This takes care of the make depend that used to be needed before APR would build.  This also removes some files that never should have been imported.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59158 13f79535-47bb-0310-9956-ffa450edef68

--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -57,5 +57,4 @@ getopt.o: getopt.c misc.h ../../include/apr_general.h \
 start.o: start.c ../../include/apr_general.h \
  ../../include/apr_config.h ../../include/apr_errno.h \
  ../../include/apr_pools.h $(INCDIR)/apr_lib.h \
- ../../include/apr_file_io.h $(INCDIR)/apr_config.h \
- $(INCDIR)/hsregex.h misc.h
+ ../../include/apr_file_io.h $(INCDIR)/hsregex.h misc.h
