--- a/network_io/unix/Makefile.in
+++ b/network_io/unix/Makefile.in
@@ -56,8 +56,7 @@ depend:
 poll.o: poll.c networkio.h ../../include/apr_network_io.h \
  ../../include/apr_general.h ../../include/apr_config.h \
  ../../include/apr_errno.h $(INCDIR)/apr_lib.h \
- ../../include/apr_file_io.h $(INCDIR)/apr_config.h \
- $(INCDIR)/hsregex.h
+ ../../include/apr_file_io.h $(INCDIR)/hsregex.h
 sendrecv.o: sendrecv.c networkio.h ../../include/apr_network_io.h \
  ../../include/apr_general.h ../../include/apr_config.h \
  ../../include/apr_errno.h
@@ -66,10 +65,8 @@ sockets.o: sockets.c networkio.h ../../include/apr_network_io.h \
  ../../include/apr_errno.h ../../include/apr_portable.h \
  ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
  ../../include/apr_win.h ../../include/apr_lock.h \
- ../../include/apr_time.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_config.h \
- $(INCDIR)/hsregex.h
+ ../../include/apr_time.h $(INCDIR)/apr_lib.h $(INCDIR)/hsregex.h
 sockopt.o: sockopt.c networkio.h ../../include/apr_network_io.h \
  ../../include/apr_general.h ../../include/apr_config.h \
  ../../include/apr_errno.h $(INCDIR)/apr_lib.h \
- ../../include/apr_file_io.h $(INCDIR)/apr_config.h \
- $(INCDIR)/hsregex.h
+ ../../include/apr_file_io.h $(INCDIR)/hsregex.h
