--- a/time/unix/Makefile.in
+++ b/time/unix/Makefile.in
@@ -54,12 +54,11 @@ depend:
 access.o: access.c atime.h ../../include/apr_time.h \
  ../../include/apr_general.h ../../include/apr_config.h \
  ../../include/apr_errno.h $(INCDIR)/apr_lib.h \
- ../../include/apr_file_io.h $(INCDIR)/apr_config.h \
- $(INCDIR)/hsregex.h
+ ../../include/apr_file_io.h $(INCDIR)/hsregex.h
 time.o: time.c atime.h ../../include/apr_time.h \
  ../../include/apr_general.h ../../include/apr_config.h \
  ../../include/apr_errno.h $(INCDIR)/apr_lib.h \
- ../../include/apr_file_io.h $(INCDIR)/apr_config.h \
- $(INCDIR)/hsregex.h ../../include/apr_portable.h \
- ../../include/apr_thread_proc.h ../../include/apr_win.h \
- ../../include/apr_network_io.h ../../include/apr_lock.h
+ ../../include/apr_file_io.h $(INCDIR)/hsregex.h \
+ ../../include/apr_portable.h ../../include/apr_thread_proc.h \
+ ../../include/apr_win.h ../../include/apr_network_io.h \
+ ../../include/apr_lock.h
