Cleanup some warnings on BSD.  Also fixes the other two problems Ben found last night.  We only include poll if the system has it.  And, a new #define, APR_OS_DEFAULT, which makes open use the default permissions, instead of using -1 with an unsigned number.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59159 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -144,6 +144,7 @@ AC_CHECK_HEADERS(sys/times.h)
 AC_CHECK_HEADERS(tpfeq.h)
 AC_CHECK_HEADERS(tpfio.h)
 AC_CHECK_HEADERS(unistd.h)
+AC_CHECK_HEADERS(poll.h)
 AC_CHECK_HEADERS(unix.h)
 AC_CHECK_HEADERS(winsock.h)
 
