--- a/include/apr_config.h.in
+++ b/include/apr_config.h.in
@@ -151,6 +151,9 @@
 /* Define if you have the <osreldate.h> header file.  */
 #undef HAVE_OSRELDATE_H
 
+/* Define if you have the <poll.h> header file.  */
+#undef HAVE_POLL_H
+
 /* Define if you have the <process.h> header file.  */
 #undef HAVE_PROCESS_H
 
