Changes to let APR compile and build on AIX with a non GNU compiler. I'll test these on other systems now.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59165 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -75,7 +75,7 @@ AC_DECISION_FORCE(USE_FCNTL_SERIALIZE)
 AC_END_DECISION
 AC_DEFINE_UNQUOTED($ac_decision) 
 
-AC_USE_FUNCTION(pthread_mutex_init, PTHREAD_SERIALIZE)
+AC_CHECK_LIB(pthread, pthread_mutex_init, AC_DEFINE(USE_PTHREAD_SERIALIZE))
 
 case "$OS" in
    *beos*)
