A couple of changes required to make things work nicer with Apache.  Mainly moving the lib*.a when they are all built into a common dir, and putting some declarations in the right spots.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59166 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -23,7 +23,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1)
 #
 # Macros for target determination
 #
-MODULES=lib file_io network_io threadproc locks misc time
+MODULES=lib file_io network_io threadproc locks misc time sig
 SUBDIRS=lib file_io/@OSDIR@ network_io/@OSDIR@ threadproc/@OSDIR@ \
         locks/@OSDIR@ misc/@OSDIR@ time/@OSDIR@ signal/@OSDIR@ 
 #shmem/@OSDIR@
@@ -39,6 +39,10 @@ SUBDIRS=lib file_io/@OSDIR@ network_io/@OSDIR@ threadproc/@OSDIR@ \
 # building the entire package.
 #
 all: Makefile $(MODULES) subdirs
+	mkdir libs
+	@for i in $(SUBDIRS); do \
+	    cp $$1/lib*.a libs \ 
+	done;
 	@echo APR built.
 
 clean: subdirs_clean
