Fix compilation bugs in APR.  Move compiled libraries into a common libs directory after building.  Removed (signal|cancel)_safe flags from context.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59170 13f79535-47bb-0310-9956-ffa450edef68

--- a/file_io/os2/Makefile.in
+++ b/file_io/os2/Makefile.in
@@ -12,7 +12,7 @@ INCDIR=../../inc
 INCDIR1=../../include
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
-LIB=../file.a
+LIB=file.a
 
 OBJS=dir.o \
 	fileacc.o \
