--- a/time/os2/Makefile.in
+++ b/time/os2/Makefile.in
@@ -12,7 +12,7 @@ INCDIR=../../inc
 INCDIR1=../../include
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
-LIB=../time.a
+LIB=time.a
 
 OBJS=time.o \
 	access.o
