--- a/Makefile.in
+++ b/Makefile.in
@@ -23,7 +23,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1)
 #
 # Macros for target determination
 #
-MODULES=lib file_io network_io threadproc locks misc time sig
+MODULES=lib file_io network_io threadproc locks misc time signal
 SUBDIRS=lib file_io/@OSDIR@ network_io/@OSDIR@ threadproc/@OSDIR@ \
         locks/@OSDIR@ misc/@OSDIR@ time/@OSDIR@ signal/@OSDIR@ 
 #shmem/@OSDIR@
@@ -39,10 +39,9 @@ SUBDIRS=lib file_io/@OSDIR@ network_io/@OSDIR@ threadproc/@OSDIR@ \
 # building the entire package.
 #
 all: Makefile $(MODULES) subdirs
+	rm -Rf libs
 	mkdir libs
-	@for i in $(SUBDIRS); do \
-	    cp $$1/lib*.a libs \ 
-	done;
+	@for i in $(SUBDIRS); do cp $$i/lib*.a libs ; done;
 	@echo APR built.
 
 clean: subdirs_clean
