--- a/file_io/unix/Makefile.in
+++ b/file_io/unix/Makefile.in
@@ -13,7 +13,7 @@ INCDIR=../../inc
 INCDIR1=../../include
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
-LIB=../libfile.a
+LIB=libfile.a
 
 OBJS=dir.o \
 	fileacc.o \
