--- a/locks/os2/Makefile.in
+++ b/locks/os2/Makefile.in
@@ -13,7 +13,7 @@ INCDIR1=../../include
 INCDIR2=../../file_io/os2
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -I.
 
-LIB=../lock.a
+LIB=lock.a
 
 OBJS=locks.o
 
