--- a/locks/unix/Makefile.in
+++ b/locks/unix/Makefile.in
@@ -14,7 +14,7 @@ INCDIR1=../../include
 INCDIR2=../../file_io/unix
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -I.
 
-LIB=../liblock.a
+LIB=liblock.a
 
 OBJS=locks.o \
 	crossproc.o \
