--- a/misc/beos/Makefile.in
+++ b/misc/beos/Makefile.in
@@ -13,7 +13,7 @@ INCDIR1=../../include
 INCDIR2=../../file_io/unix
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -I.
 
-LIB=../libmisc.a
+LIB=libmisc.a
 
 OBJS=start.o \
 
