--- a/network_io/os2/Makefile.in
+++ b/network_io/os2/Makefile.in
@@ -12,7 +12,7 @@ INCDIR=../../inc
 INCDIR1=../../include
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
-LIB=../network.a
+LIB=network.a
 
 OBJS=poll.o \
 	sendrecv.o \
