--- a/network_io/unix/Makefile.in
+++ b/network_io/unix/Makefile.in
@@ -13,7 +13,7 @@ INCDIR=../../inc
 INCDIR1=../../include
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
-LIB=../libnetwork.a
+LIB=libnetwork.a
 
 OBJS=poll.o \
 	sendrecv.o \
