--- a/signal/unix/Makefile.in
+++ b/signal/unix/Makefile.in
@@ -14,7 +14,7 @@ INCDIR1=../../include
 INCDIR2=../../file_io/unix
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -I.
 
-LIB=../libsig.a
+LIB=libsig.a
 
 OBJS=signal.o \
 
