Fix build of APR on OS/2
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59172 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -41,7 +41,7 @@ SUBDIRS=lib file_io/@OSDIR@ network_io/@OSDIR@ threadproc/@OSDIR@ \
 all: Makefile $(MODULES) subdirs
 	rm -Rf libs
 	mkdir libs
-	@for i in $(SUBDIRS); do cp $$i/lib*.a libs ; done;
+	@for i in $(SUBDIRS); do cp $$i/*.a libs ; done;
 	@echo APR built.
 
 clean: subdirs_clean
