--- a/threadproc/os2/Makefile.in
+++ b/threadproc/os2/Makefile.in
@@ -47,25 +47,37 @@ $(LIB): $(OBJS)
 depend:
 	cp Makefile.in Makefile.in.bak \
 	    && sed -ne '1,/^# DO NOT REMOVE/p' Makefile.in > Makefile.new \
-	    && gcc -MM $(INCLUDES) $(CFLAGS) *.c >> Makefile.new \
+	    && gcc -MM $(INCLUDES) $(CFLAGS) *.c | sed -e "s%\\\\\(.\)%/\\1%g" >> Makefile.new \
 	    && sed -e '1,$$s: $(INCDIR)/: $$(INCDIR)/:g' \
+                   -e '1,$$s: $(INCDIR1)/: $$(INCDIR1)/:g' \
+                   -e '1,$$s: $(INCDIR2)/: $$(INCDIR2)/:g' \
 	           -e '1,$$s: $(OSDIR)/: $$(OSDIR)/:g' Makefile.new \
 		> Makefile.in \
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-proc.o: proc.c threadproc.h ../../include/apr_thread_proc.h \
- ../../include/apr_file_io.h ../../include/apr_general.h \
- ../../include/apr_errno.h ../../file_io/unix/fileio.h
-signals.o: signals.c threadproc.h ../../include/apr_thread_proc.h \
- ../../include/apr_file_io.h ../../include/apr_general.h \
- ../../include/apr_errno.h ../../file_io/unix/fileio.h
-thread.o: thread.c threadproc.h ../../include/apr_thread_proc.h \
- ../../include/apr_file_io.h ../../include/apr_general.h \
- ../../include/apr_errno.h
+proc.o: proc.c threadproc.h $(INCDIR1)/apr_thread_proc.h \
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_general.h \
+ $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
+ $(INCDIR1)/apr_win.h $(INCDIR2)/fileio.h \
+ $(INCDIR1)/apr_lib.h $(INCDIR1)/hsregex.h
+signals.o: signals.c threadproc.h $(INCDIR1)/apr_thread_proc.h \
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_general.h \
+ $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
+ $(INCDIR1)/apr_win.h $(INCDIR2)/fileio.h
+thread.o: thread.c threadproc.h $(INCDIR1)/apr_thread_proc.h \
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_general.h \
+ $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
+ $(INCDIR1)/apr_win.h $(INCDIR1)/apr_lib.h \
+ $(INCDIR1)/hsregex.h $(INCDIR2)/fileio.h
 threadcancel.o: threadcancel.c threadproc.h \
- ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
- ../../include/apr_general.h ../../include/apr_errno.h
+ $(INCDIR1)/apr_thread_proc.h $(INCDIR1)/apr_file_io.h \
+ $(INCDIR1)/apr_general.h $(INCDIR1)/apr_config.h \
+ $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_win.h \
+ $(INCDIR2)/fileio.h
 threadpriv.o: threadpriv.c threadproc.h \
- ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
- ../../include/apr_general.h ../../include/apr_errno.h
+ $(INCDIR1)/apr_thread_proc.h $(INCDIR1)/apr_file_io.h \
+ $(INCDIR1)/apr_general.h $(INCDIR1)/apr_config.h \
+ $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_win.h \
+ $(INCDIR1)/apr_lib.h $(INCDIR1)/hsregex.h \
+ $(INCDIR2)/fileio.h
