--- a/time/os2/Makefile.in
+++ b/time/os2/Makefile.in
@@ -43,18 +43,19 @@ $(LIB): $(OBJS)
 depend:
 	cp Makefile.in Makefile.in.bak \
 	    && sed -ne '1,/^# DO NOT REMOVE/p' Makefile.in > Makefile.new \
-	    && gcc -MM $(INCLUDES) $(CFLAGS) *.c >> Makefile.new \
+	    && gcc -MM $(INCLUDES) $(CFLAGS) *.c | sed -e "s%\\\\\(.\)%/\\1%g" >> Makefile.new \
 	    && sed -e '1,$$s: $(INCDIR)/: $$(INCDIR)/:g' \
+                   -e '1,$$s: $(INCDIR1)/: $$(INCDIR1)/:g' \
 	           -e '1,$$s: $(OSDIR)/: $$(OSDIR)/:g' Makefile.new \
 		> Makefile.in \
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-access.o: access.c atime.h ../../include/apr_time.h \
- ../../include/apr_general.h ../../include/apr_errno.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_config.h \
- $(INCDIR)/hsregex.h
-time.o: time.c atime.h ../../include/apr_time.h \
- ../../include/apr_general.h ../../include/apr_errno.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_config.h \
- $(INCDIR)/hsregex.h
+access.o: access.c atime.h $(INCDIR1)/apr_time.h \
+ $(INCDIR1)/apr_general.h $(INCDIR1)/apr_config.h \
+ $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_lib.h \
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/hsregex.h
+time.o: time.c atime.h $(INCDIR1)/apr_time.h \
+ $(INCDIR1)/apr_general.h $(INCDIR1)/apr_config.h \
+ $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_lib.h \
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/hsregex.h
