Add getopt module to APR OS/2. Same as unix for now.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59175 13f79535-47bb-0310-9956-ffa450edef68

--- a/misc/os2/Makefile.in
+++ b/misc/os2/Makefile.in
@@ -15,7 +15,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -I.
 
 LIB=misc.a
 
-OBJS=start.o \
+OBJS=start.o getopt.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
