APR configure.in tweaks to allow test programs to build on OS/2.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59179 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -79,7 +79,9 @@ AC_CHECK_LIB(pthread, pthread_mutex_init, AC_DEFINE(USE_PTHREAD_SERIALIZE))
 
 case "$OS" in
    *-os2*)
+       CFLAGS="$CFLAGS -DOS2"
        OSDIR="os2"
+       LIBPREFIX=""
        ;;
    *beos*)
        OSDIR="beos"
@@ -91,6 +93,8 @@ esac
 
 AC_CHECK_LIB(dl, dlopen)
 AC_CHECK_LIB(pthread, pthread_mutex_init)
+AC_CHECK_LIB(socket,socket)
+AC_CHECK_LIB(ufc,crypt)
 
 if (test "$SYS_SW" = "AIX"); then
     CFLAGS="$CFLAGS -U__STR__"
