Fix some compile issues, and add a new function or two, because util.c needs them.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59190 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -197,7 +197,7 @@ AC_MSG_RESULT([$msg])
 dnl Checks for library functions.
 AC_CHECK_FUNCS(strcasecmp stricmp poll setsid)
 AC_CHECK_FUNCS(sigaction writev)
-AC_CHECK_FUNC(getpass)
+AC_CHECK_FUNCS(getpass)
 AC_CHECK_FUNC(_getch)
 
 dnl Start building stuff from our information
