Fix the test programs to use the new timeout API's in network I/O.  Also, fix a minor bug in the new timeout code.  I forgot to initialize the timeout.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59194 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -8,7 +8,7 @@ RM=@RM@
 CC=@CC@
 RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@ @OPTIM@ 
-LIBS=-L../network_io -lnetwork -L../threadproc -lthreadproc -L../file_io -lfile -L../misc -lmisc -L../lib -lapr -L../time -ltime -L../locks -llock -L../signal -lsig -lcrypt @LIBS@ 
+LIBS=-L../libs -lnetwork -lthreadproc -lfile -lmisc -lapr -ltime -llock -lsig -lcrypt @LIBS@ 
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../include
 INCDIR1=../../inc
