The distclean target has to remove some config.* files.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59195 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -51,6 +51,7 @@ depend: subdirs_depend
 
 distclean: clean
 	-$(RM) -f Makefile
+	-$(RM) -f config.log config.status config.cache
 
 subdirs:
 	@for i in $(SUBDIRS); do \
