A bunch of APR BEOS changes.  Including:  Better autoconf support, adding ap_getopt, adding BEOS portability support.  And, getting it much closer to the same level as Unix is currently at.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59199 13f79535-47bb-0310-9956-ffa450edef68

--- a/misc/beos/Makefile.in
+++ b/misc/beos/Makefile.in
@@ -15,7 +15,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -I.
 
 LIB=libmisc.a
 
-OBJS=start.o \
+OBJS=start.o getopt.o \
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
@@ -50,7 +50,3 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-start.o: start.c $(INCDIR)/apr_config.h \
- ../../include/apr_general.h ../../include/apr_errno.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/hsregex.h
