Make sure one can compile a server with MPM prefork if no pthread library is used (even when it exists).  Please be careful, never use a feature test macro for a header to imply that one then can use a function usually defined in this header. You explicitly have to test for the availability of the function.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59219 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -196,6 +196,7 @@ msg=no)
 AC_MSG_RESULT([$msg])
 
 dnl Checks for library functions.
+AC_CHECK_FUNCS(pthread_sigmask)
 AC_CHECK_FUNCS(strcasecmp stricmp poll setsid)
 AC_CHECK_FUNCS(sigaction writev)
 AC_CHECK_FUNCS(getpass)
