--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -21,6 +21,7 @@ TARGETS= testfile@EXEEXT@ \
 	testtime@EXEEXT@ \
 	testsig@EXEEXT@ \
 	testargs@EXEEXT@ \
+	testcontext@EXEEXT@ \
 	ab@EXEEXT@ \
 	htdigest@EXEEXT@ 
 
@@ -31,6 +32,7 @@ OBJS= testfile.o \
 	testtime.o \
 	testsig.o \
         testargs.o \
+        testcontext.o \
 	ab_apr.o \
 	htdigest.o
 
@@ -44,6 +46,9 @@ testfile@EXEEXT@: testfile.o
 
 testargs@EXEEXT@: testargs.o
 	$(CC) $(CFLAGS) testargs.o -o testargs@EXEEXT@ $(LDFLAGS) 
+
+testcontext@EXEEXT@: testcontext.o
+	$(CC) $(CFLAGS) testcontext.o -o testcontext@EXEEXT@ $(LDFLAGS) 
 
 ab@EXEEXT@: ab_apr.o
 	$(CC) $(CFLAGS) ab_apr.o -o ab@EXEEXT@ $(LDFLAGS)
