--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -57,4 +57,4 @@ getopt.o: getopt.c misc.h ../../include/apr_general.h \
 start.o: start.c ../../include/apr_general.h \
  ../../include/apr_config.h ../../include/apr_errno.h \
  $(INCDIR)/apr_pools.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h ../../include/hsregex.h misc.h
+ ../../include/apr_file_io.h misc.h
