--- a/threadproc/unix/Makefile.in
+++ b/threadproc/unix/Makefile.in
@@ -60,14 +60,14 @@ proc.o: proc.c threadproc.h ../../include/apr_thread_proc.h \
  ../../include/apr_file_io.h ../../include/apr_general.h \
  ../../include/apr_config.h ../../include/apr_errno.h \
  ../../include/apr_win.h ../../file_io/unix/fileio.h \
- ../../include/apr_lib.h ../../include/hsregex.h \
- ../../include/apr_portable.h ../../include/apr_network_io.h \
- ../../include/apr_lock.h ../../include/apr_time.h
+ ../../include/apr_lib.h ../../include/apr_portable.h \
+ ../../include/apr_network_io.h ../../include/apr_lock.h \
+ ../../include/apr_time.h
 procsup.o: procsup.c threadproc.h ../../include/apr_thread_proc.h \
  ../../include/apr_file_io.h ../../include/apr_general.h \
  ../../include/apr_config.h ../../include/apr_errno.h \
  ../../include/apr_win.h ../../file_io/unix/fileio.h \
- ../../include/apr_lib.h ../../include/hsregex.h
+ ../../include/apr_lib.h
 signals.o: signals.c threadproc.h ../../include/apr_thread_proc.h \
  ../../include/apr_file_io.h ../../include/apr_general.h \
  ../../include/apr_config.h ../../include/apr_errno.h \
@@ -77,7 +77,7 @@ thread.o: thread.c threadproc.h ../../include/apr_thread_proc.h \
  ../../include/apr_config.h ../../include/apr_errno.h \
  ../../include/apr_win.h ../../include/apr_portable.h \
  ../../include/apr_network_io.h ../../include/apr_lock.h \
- ../../include/apr_time.h
+ ../../include/apr_time.h ../../include/apr_lib.h
 threadcancel.o: threadcancel.c threadproc.h \
  ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
  ../../include/apr_general.h ../../include/apr_config.h \
@@ -87,4 +87,5 @@ threadpriv.o: threadpriv.c threadproc.h \
  ../../include/apr_general.h ../../include/apr_config.h \
  ../../include/apr_errno.h ../../include/apr_win.h \
  ../../include/apr_portable.h ../../include/apr_network_io.h \
- ../../include/apr_lock.h ../../include/apr_time.h
+ ../../include/apr_lock.h ../../include/apr_time.h \
+ ../../include/apr_lib.h
