--- a/shmem/unix/mm/configure.in
+++ b/shmem/unix/mm/configure.in
@@ -6,8 +6,8 @@ dnl #
 dnl #   standard Autoconf prolog
 dnl #
 
-AC_PREREQ(2.14)dnl
-AC_REVISION($Revision: 1.1 $)
+AC_PREREQ(2.12)dnl
+AC_REVISION(1.0)dnl
 
 dnl #   shtool bootstrap
 SHTOOL="\$(TOP)/shtool"
@@ -15,13 +15,13 @@ AC_SUBST(SHTOOL)
 ac_shtool="./shtool"
 T_MD=`$ac_shtool echo -n -e %B`
 T_ME=`$ac_shtool echo -n -e %b`
-PLATFORM=`./config.guess`
-PLATFORM=`./config.sub $PLATFORM`
+PLATFORM=`${CONFIG_SHELL-/bin/sh} ./config.guess`
+PLATFORM=`${CONFIG_SHELL-/bin/sh} ./config.sub $PLATFORM`
 MM_VERSION_STR="`$ac_shtool version -l c -d long mm_vers.c`"
 AC_SUBST(MM_VERSION_STR)
 
 dnl #   friendly header ;-)
-echo "${T_MD}Configuring MM library, Version ${MM_VERSION_STR}${T_ME}"
+echo "Configuring ${T_MD}MM${T_ME} (Shared Memory Library), Version ${T_MD}${MM_VERSION_STR}${T_ME}"
 echo "Copyright (c) 1999 Ralf S. Engelschall, All Rights Reserved."
 echo "Platform: ${T_MD}${PLATFORM}${T_ME}"
 
@@ -29,6 +29,15 @@ dnl #   autoconf initialization
 AC_INIT(README)
 AC_CONFIG_HEADER(mm_conf.h)dnl
 AC_PREFIX_DEFAULT(/usr/local)
+
+dnl #   determine build mode
+AC_ARG_ENABLE(batch,dnl
+[  --enable-batch          build in batch mode (default=no)],
+enable_batch="$enableval",
+if test ".$enable_batch" = .; then
+    enable_batch=no
+fi
+)dnl
 
 dnl #
 dnl #   determine build tools and parameters
@@ -161,7 +170,7 @@ msg=yes,dnl
 msg=no)
 AC_MSG_RESULT([$msg])
 
-AC_BEGIN_DECISION([mutual exclusion implementation method])
+AC_BEGIN_DECISION([mutex implementation method])
 AC_IFALLYES(header:sys/file.h define:LOCK_EX, 
             AC_DECIDE(MM_SEMT_FLOCK, [4.2BSD-style flock() on temporary file]))
 AC_IFALLYES(header:sys/ipc.h header:sys/sem.h header:sys/file.h dnl
@@ -188,5 +197,11 @@ mm-config dnl
 ,dnl
 chmod a+x mm-config
 )dnl
+
+if test ".$enable_batch" != .yes; then
+    echo ""
+    echo "Now please type \`${T_MD}make${T_ME}' to compile. Good luck."
+    echo ""
+fi
 
 dnl ##EOF##
