--- a/shmem/unix/mm/mm-config.in
+++ b/shmem/unix/mm/mm-config.in
@@ -1,8 +1,46 @@
 #!/bin/sh
 ##
-##  mm-config -- MM library build configuration utility
-##  Copyright (c) 1999 Ralf S. Engelschall, All Rights Reserved. 
+## mm-config -- MM library build configuration utility
 ##
+## ====================================================================
+## Copyright (c) 1999 Ralf S. Engelschall. All rights reserved.
+##
+## Redistribution and use in source and binary forms, with or without
+## modification, are permitted provided that the following conditions
+## are met:
+##
+## 1. Redistributions of source code must retain the above copyright
+##    notice, this list of conditions and the following disclaimer. 
+##
+## 2. Redistributions in binary form must reproduce the above copyright
+##    notice, this list of conditions and the following disclaimer in
+##    the documentation and/or other materials provided with the
+##    distribution.
+##
+## 3. All advertising materials mentioning features or use of this
+##    software must display the following acknowledgment:
+##    "This product includes software developed by
+##     Ralf S. Engelschall <rse@engelschall.com>."
+##
+## 4. Redistributions of any form whatsoever must retain the following
+##    acknowledgment:
+##    "This product includes software developed by
+##     Ralf S. Engelschall <rse@engelschall.com>."
+##
+## THIS SOFTWARE IS PROVIDED BY RALF S. ENGELSCHALL ``AS IS'' AND ANY
+## EXPRESSED OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+## IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+## PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL RALF S. ENGELSCHALL OR
+## ITS CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+## SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
+## NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+## LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+## HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
+## STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+## ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
+## OF THE POSSIBILITY OF SUCH DAMAGE.
+## ====================================================================
+
 DIFS=' 	
 '
 
@@ -21,12 +59,15 @@ mm_version="@MM_VERSION_STR@"
 help=no
 version=no
 
-usage="$0 [--help] [--version] [--cflags] [--ldflags] [--libs]"
+usage="mm-config [--help] [--version] [--all] [--cflags] [--ldflags] [--libs]"
 if [ $# -eq 0 ]; then
-    echo "$0:Error: Invalid option" 1>&2
-    echo "$0:Usage: $usage" 1>&2
+    echo "mm-config:Error: Invalid option" 1>&2
+    echo "mm-config:Usage: $usage" 1>&2
     exit 1
 fi
+output=""
+output_extra=""
+all=no
 prev=''
 OIFS="$IFS" IFS="$DIFS"
 for option
@@ -42,32 +83,45 @@ do
     esac
     case "$option" in
         --help|-h) 
-            echo "$0:Usage: $usage"
-            exit 1
+            echo "Usage: $usage"
+            echo "Report bugs to rse@engelschall.com"
+            exit 0
             ;;
         --version|-v)
             echo "MM $mm_version"
             exit 0
             ;;
+        --all)
+            all=yes
+            ;;
         --cflags)
-            echo "-I$mm_includedir"
+            output="$output -I$mm_includedir"
+            output_extra="$output_extra $mm_cflags"
             ;;
         --ldflags)
-            echo "-L$mm_libdir"
+            output="$output -L$mm_libdir"
+            output_extra="$output_extra $mm_ldflags"
             ;;
         --libs)
-            echo "-lmm"
+            output="$output -lmm"
+            output_extra="$output_extra $mm_libs"
             ;;
         * )             
-            echo "$0:Error: Invalid option" 1>&2
-            echo "$0:Usage: $usage" 1>&2
+            echo "mm-config:Error: Invalid option" 1>&2
+            echo "mm-config:Usage: $usage" 1>&2
             exit 1;
             ;;
     esac
 done
 IFS="$OIFS"
 if [ ".$prev" != . ]; then
-    echo "$0:Error: missing argument to --`echo $prev | sed 's/_/-/g'`" 1>&2
+    echo "mm-config:Error: missing argument to --`echo $prev | sed 's/_/-/g'`" 1>&2
     exit 1
+fi
+if [ ".$output" != . ]; then
+    if [ ".$all" = .yes ]; then
+        output="$output $output_extra"
+    fi
+    echo $output
 fi
 
