Make beos use the common unix code.  Currently, we need the Makefile here, but in time, we will most likely change the build process to not require this. Submitted by:  David Reid
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59251 13f79535-47bb-0310-9956-ffa450edef68

--- a/time/beos/Makefile.in
+++ b/time/beos/Makefile.in
@@ -14,7 +14,10 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
 LIB=libtime.a
 
-OBJS=time.o \
+OBJS=../unix/time.o \
+	../unix/access.o
+
+OBJS2=time.o \
 	access.o
 
 .c.o:
@@ -32,7 +35,7 @@ $(OBJS): Makefile
 
 $(LIB): $(OBJS)
 	$(RM) -f $@
-	$(AR) cr $@ $(OBJS)
+	$(AR) cr $@ $(OBJS2)
 	$(RANLIB) $@
 
 #
