--- a/network_io/beos/Makefile.in
+++ b/network_io/beos/Makefile.in
@@ -9,7 +9,7 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../inc
-INCDIR1=../../include
+INCDIR1=../../include -I../../file_io/unix
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
 LIB=libnetwork.a
@@ -18,6 +18,7 @@ OBJS=poll.o \
 	sendrecv.o \
 	sockets.o \
 	sockopt.o \
+         inet_aton.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
